# airboss

./: .env.example  .envrc  .gitattributes  .gitignore  .markdownlint.json  CLAUDE.md  biome.json  docker-compose.yml  drizzle.config.ts  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts  vitest.globalSetup.ts  vitest.setup.dom.ts  vitest.setup.ts
tools/handbook-ingest/: .gitignore  README.md  measure_chapter_sizes.py  pyproject.toml
tools/handbook-ingest/cron/: com.airboss.discover-errata.plist.template  install.sh
tools/handbook-ingest/ingest/: __init__.py  __main__.py  _http_safety.py  aim_html_extract.py  apply_errata.py  chapter_plaintext.py  cli.py  config_loader.py  dedup_existing.py  discovery_meta.py  empty_section.py  fetch.py  figures.py  figures_dedup.py  front_matter.py  http_fetch.py  normalize.py  ocr_leak.py  outline.py  overrides_loader.py  paths.py  prompt_emit.py  section_tree.py  sections.py  sections_compare.py  sections_via_llm.py  sections_via_sidecar.py  sections_via_toc.py  sections_via_toc_file.py  tables.py
tools/handbook-ingest/tests/: test_aim_html_extract.py  test_chapter_plaintext.py  test_chapter_plaintext_chapter_mode.py  test_cli_integration.py  test_config_loader.py  test_config_loader_chapters.py  test_config_loader_dismissed.py  test_config_loader_errata.py  test_empty_section.py  test_fetch_atomic.py  test_fetch_atomicity.py  test_figure_pairing.py  test_figures_dedup.py  test_front_matter.py  test_front_matter_wire_in.py  test_handbooks_registry.py  test_http_fetch.py  test_http_safety.py  test_ocr_leak.py  (+12 more)
(+13808 files in other folders)
